# distributed_orchestration_engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml
.qwen/: settings.json
automated_tests/: __init__.py  rag_workflow_test.py  run_tests.py  test_sleep_jobs.py  test_sleep_workflows.py  test_xcom.py
automated_tests/test_workflows/: __init__.py  api_client.py  main.py  payloads.py  topologies.py
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
engine-core/: pom.xml
manager-node/: Dockerfile  pom.xml  test_output.txt  test_output_listener.txt
plan/: future-improvements.md
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: common_utils.py  complex_sleep_workflow.py  consumer_script.py  data_pipeline_workflow.py  dummy_workflow.py  producer_script.py  showcase_workflow.py  xcom_storage_workflow.py
python-sdk/examples/data_pipeline/: generator.py  loader.py  transformer.py
python-sdk/examples/order_pipeline/: aggregate.py  fraud_scan.py  inventory_check.py  process_payment.py  send_receipt.py
python-sdk/src/fernos/: __init__.py  core.py  storage.py
python-sdk/src/fernos/compiler/: __init__.py  preprocessor.py
python-sdk/src/fernos/worker/: __init__.py  bridge.py  events.py  xcom.py
python-sdk/tests/: test_chaining.py  test_communication_bridge.py  test_data_flow_edges.py  test_fluent_api.py  test_inclusion.py  test_module_injection.py  test_remote_workflow.py  test_specialized_jobs.py  test_storage.py  test_xcom.py
worker-node/: Dockerfile  pom.xml
(+284 files in other folders)
