[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fernos"
version = "0.1.0"
authors = [
  { name="Moad Abdou", email="abdellawy553@gmail.com" },
]
description = "Python SDK for Fern-OS Distributed Orchestration Engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
